--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://ankurankan.github.io
 title: My Octopress Blog
-subtitle: A blogging framework for hackers.
+subtitle:
 author: Ankur Ankan
 simple_search: http://google.com/search
 description:
